# SFML-Input

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  TestAllKeys.ahk  main.cpp
.github/workflows/: ci.yml
src/: Application.cpp  Application.hpp  KeyboardView.cpp  KeyboardView.hpp  ShinyText.cpp  ShinyText.hpp  main.cpp  ranges.hpp  strings.cpp  strings.hpp
